done ghép giao diện

--- a/src/app/module/user/edit-profile/edit-profile.component.html
+++ b/src/app/module/user/edit-profile/edit-profile.component.html
@@ -10,7 +10,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="index-register.html"><img src="assets/images/logo.png" alt="logo" /></a>
+        <a class="navbar-brand" routerLink="/user/newsfeed/detail"><img src="assets/images/logo.png" alt="logo" /></a>
       </div>
 
       <!-- Collect the nav links, forms, and other content for toggling -->
@@ -19,31 +19,26 @@
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Home <span><img src="assets/images/down-arrow.png" alt="" /></span></a>
             <ul class="dropdown-menu newsfeed-home">
-              <li><a href="index.html">Landing Page 1</a></li>
-              <li><a href="index-register.html">Landing Page 2</a></li>
+              <li><a routerLink="/user/newsfeed/detail">Newsfeed</a></li>
             </ul>
           </li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Newsfeed <span><img src="assets/images/down-arrow.png" alt="" /></span></a>
             <ul class="dropdown-menu newsfeed-home">
-              <li><a href="newsfeed.html">Newsfeed</a></li>
-              <li><a href="newsfeed-people-nearby.html">Poeple Nearly</a></li>
-              <li><a href="newsfeed-friends.html">My friends</a></li>
+              <li><a routerLink="/user/newsfeed/detail">Newsfeed</a></li>
+              <li><a routerLink="/user/newsfeed/requests">Friend Requests</a></li>
+              <li><a routerLink="/user/newsfeed/friends">My friends</a></li>
+              <li><a routerLink="/user/newsfeed/people-nearby">Friend Suggestions</a></li>
               <li><a href="newsfeed-messages.html">Chatroom</a></li>
               <li><a href="newsfeed-images.html">Images</a></li>
-              <li><a href="newsfeed-videos.html">Videos</a></li>
             </ul>
           </li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Timeline <span><img src="assets/images/down-arrow.png" alt="" /></span></a>
             <ul class="dropdown-menu login">
               <li><a href="timeline.html">Timeline</a></li>
-              <li><a href="timeline-about.html">Timeline About</a></li>
-              <li><a href="timeline-album.html">Timeline Album</a></li>
-              <li><a href="timeline-friends.html">Timeline Friends</a></li>
-              <li><a href="edit-profile-basic.html">Edit: Basic Info</a></li>
-              <li><a href="edit-profile-work-edu.html">Edit: Work</a></li>
-              <li><a href="edit-profile-interests.html">Edit: Interests</a></li>
+              <li><a routerLink="/user/user-detail/timeline">Timeline About</a></li>
+              <li><a routerLink="/user/user-detail/timeline-friends">Timeline Friends</a></li>
               <li><a href="edit-profile-settings.html">Account Settings</a></li>
               <li><a routerLink="/user/password">Change Password</a></li>
             </ul>
@@ -51,20 +46,19 @@
           <li class="dropdown">
             <a href="#" class="dropdown-toggle pages" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">All Pages <span><img src="assets/images/down-arrow.png" alt="" /></span></a>
             <ul class="dropdown-menu page-list">
-              <li><a href="index.html">Landing Page 1</a></li>
-              <li><a href="index-register.html">Landing Page 2</a></li>
-              <li><a href="newsfeed.html">Newsfeed</a></li>
-              <li><a href="newsfeed-people-nearby.html">Poeple Nearly</a></li>
-              <li><a href="newsfeed-friends.html">My friends</a></li>
+              <li><a routerLink="/user/newsfeed/detail">Newsfeed</a></li>
+              <!--              <li><a href="index-register.html">Landing Page 2</a></li>-->
+              <!--              <li><a routerLink="/user/newsfeed/detail">Newsfeed</a></li>-->
+              <li><a routerLink="/user/newsfeed/requests">Friend Requests</a></li>
+              <li><a routerLink="/user/newsfeed/friends">My friends</a></li>
+              <li><a routerLink="/user/newsfeed/people-nearby">Friend Suggestions</a></li>
               <li><a href="newsfeed-messages.html">Chatroom</a></li>
               <li><a href="newsfeed-images.html">Images</a></li>
-              <li><a href="newsfeed-videos.html">Videos</a></li>
               <li><a href="timeline.html">Timeline</a></li>
-              <li><a href="timeline-about.html">Timeline About</a></li>
-              <li><a href="timeline-album.html">Timeline Album</a></li>
-              <li><a href="timeline-friends.html">Timeline Friends</a></li>
-              <li><a href="edit-profile-basic.html">Edit Profile</a></li>
-              <li><a href="contact.html">Contact Us</a></li>
+              <li><a routerLink="/user/user-detail/timeline">Timeline About</a></li>
+              <li><a routerLink="/user/user-detail/timeline-friends">Timeline Friends</a></li>
+              <li><a routerLink="/user/edit">Edit Profile</a></li>
+              <li><a routerLink="/user/password">Change Password</a></li>
             </ul>
           </li>
           <li class="dropdown"><a >{{currentUser.username}}</a></li>
@@ -102,10 +96,10 @@
           </div>
           <div class="col-md-9">
             <ul class="list-inline profile-menu">
-              <li><a href="timeline.html">Timeline</a></li>
-              <li><a href="timeline-about.html" class="active">About</a></li>
+              <li><a routerLink="/user/user-detail/timeline">Timeline</a></li>
+              <li><a routerLink="/user/user-detail/timeline">About</a></li>
               <li><a href="timeline-album.html">Album</a></li>
-              <li><a href="timeline-friends.html">Friends</a></li>
+              <li><a routerLink="/user/user-detail/timeline-friends">Friends</a></li>
             </ul>
             <ul class="follow-me list-inline">
 
@@ -123,8 +117,8 @@
         </div>
         <div class="mobile-menu">
           <ul class="list-inline">
-            <li><a href="timline.html">Timeline</a></li>
-            <li><a href="timeline-about.html" class="active">About</a></li>
+            <li><a routerLink="/user/user-detail/timeline">Timeline</a></li>
+            <li><a routerLink="/user/user-detail/timeline">About</a></li>
             <li><a href="timeline-album.html">Album</a></li>
             <li><a href="timeline-friends.html">Friends</a></li>
           </ul>
