--- a/src/app/module/user/edit-password/edit-password.component.html
+++ b/src/app/module/user/edit-password/edit-password.component.html
@@ -4,72 +4,74 @@
 
       <!-- Brand and toggle get grouped for better mobile display -->
       <div class="navbar-header">
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
+                data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
           <span class="sr-only">Toggle navigation</span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="index-register.html"><img src="assets/images/logo.png" alt="logo" /></a>
+        <a class="navbar-brand" routerLink="/user/newsfeed/detail"><img src="assets/images/logo.png" alt="logo"/></a>
       </div>
 
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav navbar-right main-menu">
           <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Home <span><img src="assets/images/down-arrow.png" alt="" /></span></a>
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
+               aria-expanded="false">Home <span><img src="assets/images/down-arrow.png" alt=""/></span></a>
             <ul class="dropdown-menu newsfeed-home">
-              <li><a href="index.html">Landing Page 1</a></li>
-              <li><a href="index-register.html">Landing Page 2</a></li>
+              <li><a routerLink="/user/newsfeed/detail">Newsfeed</a></li>
             </ul>
           </li>
           <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Newsfeed <span><img src="assets/images/down-arrow.png" alt="" /></span></a>
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
+               aria-haspopup="true"
+               aria-expanded="false">Newsfeed <span><img src="assets/images/down-arrow.png" alt=""/></span></a>
             <ul class="dropdown-menu newsfeed-home">
-              <li><a href="newsfeed.html">Newsfeed</a></li>
-              <li><a href="newsfeed-people-nearby.html">Poeple Nearly</a></li>
-              <li><a href="newsfeed-friends.html">My friends</a></li>
+              <li><a routerLink="/user/newsfeed/detail">Newsfeed</a></li>
+              <li><a routerLink="/user/newsfeed/requests">Friend Requests</a></li>
+              <li><a routerLink="/user/newsfeed/friends">My friends</a></li>
+              <li><a routerLink="/user/newsfeed/people-nearby">Friend Suggestions</a></li>
               <li><a href="newsfeed-messages.html">Chatroom</a></li>
               <li><a href="newsfeed-images.html">Images</a></li>
-              <li><a href="newsfeed-videos.html">Videos</a></li>
             </ul>
           </li>
           <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Timeline <span><img src="assets/images/down-arrow.png" alt="" /></span></a>
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
+               aria-haspopup="true"
+               aria-expanded="false">Timeline <span><img src="assets/images/down-arrow.png" alt=""/></span></a>
             <ul class="dropdown-menu login">
               <li><a href="timeline.html">Timeline</a></li>
-              <li><a href="timeline-about.html">Timeline About</a></li>
-              <li><a href="timeline-album.html">Timeline Album</a></li>
-              <li><a href="timeline-friends.html">Timeline Friends</a></li>
-              <li><a href="edit-profile-basic.html">Edit: Basic Info</a></li>
-              <li><a href="edit-profile-work-edu.html">Edit: Work</a></li>
-              <li><a href="edit-profile-interests.html">Edit: Interests</a></li>
+              <li><a routerLink="/user/user-detail/timeline">Timeline About</a></li>
+              <li><a routerLink="/user/user-detail/timeline-friends">Timeline Friends</a></li>
               <li><a href="edit-profile-settings.html">Account Settings</a></li>
-              <li><a href="edit-profile-password.html">Change Password</a></li>
+              <li><a routerLink="/user/password">Change Password</a></li>
             </ul>
           </li>
           <li class="dropdown">
-            <a href="#" class="dropdown-toggle pages" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">All Pages <span><img src="assets/images/down-arrow.png" alt="" /></span></a>
+            <a href="#" class="dropdown-toggle pages" data-toggle="dropdown" role="button" aria-haspopup="true"
+               aria-expanded="false">All Pages <span><img src="assets/images/down-arrow.png" alt=""/></span></a>
             <ul class="dropdown-menu page-list">
-              <li><a href="index.html">Landing Page 1</a></li>
-              <li><a href="index-register.html">Landing Page 2</a></li>
-              <li><a href="newsfeed.html">Newsfeed</a></li>
-              <li><a href="newsfeed-people-nearby.html">Poeple Nearly</a></li>
-              <li><a href="newsfeed-friends.html">My friends</a></li>
+              <li><a routerLink="/user/newsfeed/detail">Newsfeed</a></li>
+              <!--              <li><a href="index-register.html">Landing Page 2</a></li>-->
+<!--              <li><a routerLink="/user/newsfeed/detail">Newsfeed</a></li>-->
+              <li><a routerLink="/user/newsfeed/requests">Friend Requests</a></li>
+              <li><a routerLink="/user/newsfeed/friends">My friends</a></li>
+              <li><a routerLink="/user/newsfeed/people-nearby">Friend Suggestions</a></li>
               <li><a href="newsfeed-messages.html">Chatroom</a></li>
               <li><a href="newsfeed-images.html">Images</a></li>
-              <li><a href="newsfeed-videos.html">Videos</a></li>
               <li><a href="timeline.html">Timeline</a></li>
-              <li><a href="timeline-about.html">Timeline About</a></li>
-              <li><a href="timeline-album.html">Timeline Album</a></li>
-              <li><a href="timeline-friends.html">Timeline Friends</a></li>
-              <li><a href="edit-profile-basic.html">Edit Profile</a></li>
-              <li><a href="contact.html">Contact Us</a></li>
+              <li><a routerLink="/user/user-detail/timeline">Timeline About</a></li>
+              <li><a routerLink="/user/user-detail/timeline-friends">Timeline Friends</a></li>
+              <li><a routerLink="/user/edit">Edit Profile</a></li>
+              <li><a routerLink="/user/password">Change Password</a></li>
             </ul>
           </li>
-          <li class="dropdown"><a >{{currentUser.username}}</a></li>
-          <li class="dropdown"><img style="width: 40px;height: 40px;border-radius: 50%;margin-top: 8px" src="{{avatar}}" alt=""></li>
-          <li class="dropdown"><a (click)="logout()" >Logout</a></li>
+          <li class="dropdown"><a>{{currentUser.username}}</a></li>
+          <li class="dropdown"><img style="width: 40px;height: 40px;border-radius: 50%;margin-top: 8px" src="{{avatar}}"
+                                    alt=""></li>
+          <li class="dropdown"><a (click)="logout()">Logout</a></li>
         </ul>
         <form class="navbar-form navbar-right hidden-sm">
           <div class="form-group">
@@ -95,17 +97,17 @@
         <div class="row">
           <div class="col-md-3">
             <div class="profile-info">
-              <img src="{{avatar}}" alt="" class="img-responsive profile-photo" />
+              <img src="{{avatar}}" alt="" class="img-responsive profile-photo"/>
               <h3>{{currentUser.username}}</h3>
               <p class="text-muted">Creative Director</p>
             </div>
           </div>
           <div class="col-md-9">
             <ul class="list-inline profile-menu">
-              <li><a href="timeline.html">Timeline</a></li>
-              <li><a href="timeline-about.html" class="active">About</a></li>
+              <li><a routerLink="/user/user-detail/timeline">Timeline</a></li>
+              <li><a routerLink="/user/user-detail/timeline">About</a></li>
               <li><a href="timeline-album.html">Album</a></li>
-              <li><a href="timeline-friends.html">Friends</a></li>
+              <li><a routerLink="/user/user-detail/timeline-friends">Friends</a></li>
             </ul>
             <ul class="follow-me list-inline">
 
@@ -117,14 +119,14 @@
       <!--Timeline Menu for Small Screens-->
       <div class="navbar-mobile hidden-lg hidden-md">
         <div class="profile-info">
-          <img src="{{avatar}}" alt="" class="img-responsive profile-photo" />
+          <img src="{{avatar}}" alt="" class="img-responsive profile-photo"/>
           <h4>Sarah Cruiz</h4>
           <p class="text-muted">Creative Director</p>
         </div>
         <div class="mobile-menu">
           <ul class="list-inline">
-            <li><a href="timline.html">Timeline</a></li>
-            <li><a href="timeline-about.html" class="active">About</a></li>
+            <li><a routerLink="/user/user-detail/timeline">Timeline</a></li>
+            <li><a routerLink="/user/user-detail/timeline">About</a></li>
             <li><a href="timeline-album.html">Album</a></li>
             <li><a href="timeline-friends.html">Friends</a></li>
           </ul>
@@ -138,11 +140,14 @@
 
           <!--Edit Profile Menu-->
           <ul class="edit-menu">
-            <li ><i class="icon ion-ios-information-outline"></i><a routerLink="/user/user-detail">Basic Information</a></li>
+            <li><i class="icon ion-ios-information-outline"></i><a routerLink="/user/user-detail/timeline">Basic
+              Information</a>
+            </li>
             <!--            <li><i class="icon ion-ios-briefcase-outline"></i><a href="edit-profile-work-edu.html">Education and Work</a></li>-->
             <!--            <li><i class="icon ion-ios-heart-outline"></i><a href="edit-profile-interests.html">My Interests</a></li>-->
             <li><i class="icon ion-ios-settings"></i><a href="edit-profile-settings.html">Account Settings</a></li>
-            <li class="active"><i class="icon ion-ios-locked-outline"></i><a routerLink="/user/password">Change Password</a></li>
+            <li class="active"><i class="icon ion-ios-locked-outline"></i><a routerLink="/user/password">Change
+              Password</a></li>
           </ul>
         </div>
         <div class="col-md-7">
@@ -153,15 +158,18 @@
             <div class="block-title">
               <h4 class="grey"><i class="icon ion-ios-locked-outline"></i>Change Password</h4>
               <div class="line"></div>
-              <p>Create a new password with 6-32 characters. A strong password is a password that is a combination of characters, numbers, and symbols.</p>
+              <p>Create a new password with 6-32 characters. A strong password is a password that is a combination of
+                characters, numbers, and symbols.</p>
               <div class="line"></div>
             </div>
             <div class="edit-block">
-              <form [formGroup]="updateForm" (ngSubmit)="update()" name="update-pass" id="education" class="form-inline">
+              <form [formGroup]="updateForm" (ngSubmit)="update()" name="update-pass" id="education"
+                    class="form-inline">
                 <div class="row">
                   <div class="form-group col-xs-12">
                     <label for="my-password">Old password</label>
-                    <input formControlName="password" id="my-password" class="form-control input-group-lg" type="password" name="password" title="Enter password" placeholder="Old password"/>
+                    <input formControlName="password" id="my-password" class="form-control input-group-lg"
+                           type="password" name="password" title="Enter password" placeholder="Old password"/>
                   </div>
                 </div>
                 <div class="row">
@@ -175,11 +183,13 @@
                 <div class="row">
                   <div class="form-group col-xs-6">
                     <label>New password</label>
-                    <input formControlName="newPassword" class="form-control input-group-lg" type="password" name="password" title="Enter password" placeholder="New password"/>
+                    <input formControlName="newPassword" class="form-control input-group-lg" type="password"
+                           name="password" title="Enter password" placeholder="New password"/>
                   </div>
                   <div class="form-group col-xs-6">
                     <label>Confirm password</label>
-                    <input formControlName="confirmPassword" class="form-control input-group-lg" type="password" name="password" title="Enter password" placeholder="Confirm password"/>
+                    <input formControlName="confirmPassword" class="form-control input-group-lg" type="password"
+                           name="password" title="Enter password" placeholder="Confirm password"/>
                   </div>
                 </div>
                 <div class="row">
@@ -234,7 +244,7 @@
     <div class="row">
       <div class="footer-wrapper">
         <div class="col-md-3 col-sm-3">
-          <a href=""><img src="assets/images/logo-black.png" alt="" class="footer-logo" /></a>
+          <a href=""><img src="assets/images/logo-black.png" alt="" class="footer-logo"/></a>
           <ul class="list-inline social-icons">
             <li><a href="#"><i class="icon ion-social-facebook"></i></a></li>
             <li><a href="#"><i class="icon ion-social-twitter"></i></a></li>
