update xem trang cá nhân người khác

--- a/src/app/module/user/friend-relation/friend-nearby/friend-nearby.component.html
+++ b/src/app/module/user/friend-relation/friend-nearby/friend-nearby.component.html
@@ -13,8 +13,8 @@
               </div>
               <div class="col-md-7 col-sm-7">
                 <h5><a routerLink="/user/people-detail/{{user.id}}" class="profile-link">{{user?.username}}</a></h5>
-                <p>Software Engineer</p>
-                <p class="text-muted">500m away</p>
+                <p>{{user.address}}</p>
+                <p class="text-muted">{{user.favorite}}</p>
               </div>
               <div class="col-md-3 col-sm-3">
                 <button class="btn btn-primary pull-right" (click)="addFriend(user.id, user?.username)">Add Friend</button>
