--- a/src/app/module/user/friend-relation/friend-request/friend-request.component.html
+++ b/src/app/module/user/friend-relation/friend-request/friend-request.component.html
@@ -4,9 +4,9 @@
   <div class="row">
     <div *ngFor="let user of listFriendRequest" class="col-md-6 col-sm-6">
       <div class="friend-card">
-        <img src="http://placehold.it/1030x360" alt="profile-cover" class="img-responsive cover"/>
+        <img src="{{user?.cover}}" alt="profile-cover" class="img-responsive cover"/>
         <div class="card-info">
-          <img src="http://placehold.it/300x300" alt="user" class="profile-photo-lg"/>
+          <img src="{{user?.avatar}}" alt="user" class="profile-photo-lg"/>
           <div class="friend-info">
             <div class="pull-right">
 
@@ -19,8 +19,8 @@
               </button>
             </div>
             <!--                    <a href="#" class="pull-right text-green">My Friend</a>-->
-            <h5><a href="timeline.html" class="profile-link">{{user.username}}</a></h5>
-            <p>Student at Harvard</p>
+            <h5><a routerLink="/user/people-detail/{{user.id}}" class="profile-link">{{user.username}}</a></h5>
+            <p>{{user.address}}</p>
           </div>
         </div>
       </div>
