--- a/src/app/module/post/components/list-post/list-post.component.html
+++ b/src/app/module/post/components/list-post/list-post.component.html
@@ -200,7 +200,9 @@
                   <a class="btn text-green"><i class="icon ion-thumbsup"></i> 49</a>
                   <a class="btn text-red"><i class="fa fa-thumbs-down"></i> 0</a>
                   <button (click)="update(ct?.id,ct.user?.id)">Edit</button>
+                  <button (click)="deletePost(ct?.id)">delete</button>
                 </div>
+
                 <div class="line-divider"></div>
                 <div class="post-text">
 
