done show mutual friend

--- a/src/app/module/user/friend-relation/friend-nearby/friend-nearby.component.html
+++ b/src/app/module/user/friend-relation/friend-nearby/friend-nearby.component.html
@@ -12,7 +12,7 @@
                 <img src="{{user?.avatar}}" alt="user" class="profile-photo-lg"/>
               </div>
               <div class="col-md-7 col-sm-7">
-                <h5><a routerLink="/user/people-detail/{{user.id}}" class="profile-link">{{user?.username}}</a></h5>
+                <h5><a routerLink="/user/people-detail/{{user.id}}/about/{{user.id}}" class="profile-link">{{user?.username}}</a></h5>
                 <p>{{user.address}}</p>
                 <p class="text-muted">{{user.favorite}}</p>
               </div>
