--- a/src/app/module/user/friend-relation/friend-request/friend-request.component.html
+++ b/src/app/module/user/friend-relation/friend-request/friend-request.component.html
@@ -19,7 +19,7 @@
               </button>
             </div>
             <!--                    <a href="#" class="pull-right text-green">My Friend</a>-->
-            <h5><a routerLink="/user/people-detail/{{user.id}}" class="profile-link">{{user.username}}</a></h5>
+            <h5><a routerLink="/user/people-detail/{{user.id}}/about/{{user.id}}" class="profile-link">{{user.username}}</a></h5>
             <p>{{user.address}}</p>
           </div>
         </div>
