--- a/src/app/module/user/people-detail/mutual-friend/mutual-friend.component.html
+++ b/src/app/module/user/people-detail/mutual-friend/mutual-friend.component.html
@@ -3,7 +3,7 @@
   <!-- Friend List
   ================================================= -->
   <div class="row">
-    <div *ngFor="let friend of listFriend" class="friend-list">
+    <div *ngFor="let friend of mutualFriend" class="friend-list">
       <div class="col-md-6 col-sm-6">
         <div class="friend-card">
           <img src="{{friend?.cover}}" alt="profile-cover" class="img-responsive cover"/>
