--- a/src/app/module/user/people-detail/people-detail.component.html
+++ b/src/app/module/user/people-detail/people-detail.component.html
@@ -42,8 +42,8 @@
                aria-expanded="false">Timeline <span><img src="assets/images/down-arrow.png" alt=""/></span></a>
             <ul class="dropdown-menu login">
               <li><a href="timeline.html">Timeline</a></li>
-              <li><a routerLink="timeline">Timeline About</a></li>
-              <li><a routerLink="timeline-friends">Timeline Friends</a></li>
+              <li><a routerLink="/user/user-detail/timeline">Timeline About</a></li>
+              <li><a routerLink="/user/user-detail/timeline-friends">Timeline Friends</a></li>
               <li><a href="edit-profile-settings.html">Account Settings</a></li>
               <li><a routerLink="/user/password">Change Password</a></li>
             </ul>
@@ -145,7 +145,7 @@
             <!--            <li><i class="icon ion-ios-heart-outline"></i><a href="edit-profile-interests.html">My Interests</a></li>-->
 <!--            <li><i class="icon ion-ios-settings"></i><a href="edit-profile-settings.html">Account Settings</a></li>-->
 <!--            <li><i class="icon ion-ios-locked"></i><a routerLink="/user/password">Change Password</a></li>-->
-            <li><i class="icon ion-ios-people"></i><a routerLink="/user/password">Friends ({{friendList?.length}}) </a></li>
+            <li><i class="icon ion-ios-people"></i><a routerLink="people-detail-friends/{{peopleDetail?.id}}">Friends ({{friendList?.length}}) </a></li>
             <li><i class="icon ion-ios-people"></i><a routerLink="mutual-friend/{{peopleDetail?.id}}">Mutual Friends ({{mutualFriend?.length}})</a></li>
           </ul>
         </div>
