--- a/src/app/module/user/user-detail/user-detail.component.html
+++ b/src/app/module/user/user-detail/user-detail.component.html
@@ -41,7 +41,7 @@
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
                aria-expanded="false">Timeline <span><img src="assets/images/down-arrow.png" alt=""/></span></a>
             <ul class="dropdown-menu login">
-              <li><a href="timeline.html">Timeline</a></li>
+              <li><a routerLink="timeline-post">Timeline</a></li>
               <li><a routerLink="timeline">Timeline About</a></li>
               <li><a routerLink="timeline-friends">Timeline Friends</a></li>
               <li><a href="edit-profile-settings.html">Account Settings</a></li>
