done ghép đăng bài

--- a/src/app/module/user/edit-password/edit-password.component.html
+++ b/src/app/module/user/edit-password/edit-password.component.html
@@ -42,7 +42,7 @@
                aria-haspopup="true"
                aria-expanded="false">Timeline <span><img src="assets/images/down-arrow.png" alt=""/></span></a>
             <ul class="dropdown-menu login">
-              <li><a href="timeline.html">Timeline</a></li>
+              <li><a routerLink="/post/detail/list-post">Timeline</a></li>
               <li><a routerLink="/user/user-detail/timeline">Timeline About</a></li>
               <li><a routerLink="/user/user-detail/timeline-friends">Timeline Friends</a></li>
               <li><a href="edit-profile-settings.html">Account Settings</a></li>
@@ -61,7 +61,7 @@
               <li><a routerLink="/user/newsfeed/people-nearby">Friend Suggestions</a></li>
               <li><a href="newsfeed-messages.html">Chatroom</a></li>
               <li><a href="newsfeed-images.html">Images</a></li>
-              <li><a href="timeline.html">Timeline</a></li>
+              <li><a routerLink="/post/detail/list-post">Timeline</a></li>
               <li><a routerLink="/user/user-detail/timeline">Timeline About</a></li>
               <li><a routerLink="/user/user-detail/timeline-friends">Timeline Friends</a></li>
               <li><a routerLink="/user/edit">Edit Profile</a></li>
@@ -99,12 +99,12 @@
             <div class="profile-info">
               <img src="{{avatar}}" alt="" class="img-responsive profile-photo"/>
               <h3>{{currentUser.username}}</h3>
-              <p class="text-muted">Creative Director</p>
+              <p class="text-muted">{{currentUser.address}}</p>
             </div>
           </div>
           <div class="col-md-9">
             <ul class="list-inline profile-menu">
-              <li><a routerLink="/user/user-detail/timeline">Timeline</a></li>
+              <li><a routerLink="/post/detail/list-post">Timeline</a></li>
               <li><a routerLink="/user/user-detail/timeline">About</a></li>
               <li><a href="timeline-album.html">Album</a></li>
               <li><a routerLink="/user/user-detail/timeline-friends">Friends</a></li>
@@ -120,12 +120,12 @@
       <div class="navbar-mobile hidden-lg hidden-md">
         <div class="profile-info">
           <img src="{{avatar}}" alt="" class="img-responsive profile-photo"/>
-          <h4>Sarah Cruiz</h4>
-          <p class="text-muted">Creative Director</p>
+          <h4>{{currentUser.username}}</h4>
+          <p class="text-muted">{{currentUser.address}}</p>
         </div>
         <div class="mobile-menu">
           <ul class="list-inline">
-            <li><a routerLink="/user/user-detail/timeline">Timeline</a></li>
+            <li><a routerLink="/post/detail/list-post">Timeline</a></li>
             <li><a routerLink="/user/user-detail/timeline">About</a></li>
             <li><a href="timeline-album.html">Album</a></li>
             <li><a href="timeline-friends.html">Friends</a></li>
