--- a/src/app/module/post/components/post/post.component.html
+++ b/src/app/module/post/components/post/post.component.html
@@ -11,7 +11,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" routerLink="/user/newsfeed/detail"><img src="assets/images/logo.png" alt="logo"/></a>
+        <a class="navbar-brand" routerLink="/user/newsfeed/detail"><img src="./assets/images/logo.png" alt="logo"/></a>
       </div>
 
       <!-- Collect the nav links, forms, and other content for toggling -->
@@ -19,7 +19,7 @@
         <ul class="nav navbar-nav navbar-right main-menu">
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
-               aria-expanded="false">Home <span><img src="assets/images/down-arrow.png" alt=""/></span></a>
+               aria-expanded="false">Home <span><img src="images/down-arrow.png" alt=""/></span></a>
             <ul class="dropdown-menu newsfeed-home">
               <li><a routerLink="/user/newsfeed/detail">Newsfeed</a></li>
               <!--              <li><a href="index-register.html">Landing Page 2</a></li>-->
@@ -27,7 +27,7 @@
           </li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
-               aria-expanded="false">Newsfeed <span><img src="assets/images/down-arrow.png" alt=""/></span></a>
+               aria-expanded="false">Newsfeed <span><img src="images/down-arrow.png" alt=""/></span></a>
             <ul class="dropdown-menu newsfeed-home">
               <li><a routerLink="/user/newsfeed/detail">Newsfeed</a></li>
               <li><a routerLink="/user/newsfeed/requests">Friend Requests</a></li>
@@ -39,18 +39,18 @@
           </li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
-               aria-expanded="false">Timeline <span><img src="assets/images/down-arrow.png" alt=""/></span></a>
+               aria-expanded="false">Timeline <span><img src="images/down-arrow.png" alt=""/></span></a>
             <ul class="dropdown-menu login">
-              <li><a routerLink="/post/detail/list-post">Timeline</a></li>
-              <li><a routerLink="timeline">Timeline About</a></li>
-              <li><a routerLink="timeline-friends">Timeline Friends</a></li>
+              <li><a routerLink="/user/user-detail/timeline-post">Timeline</a></li>
+              <li><a routerLink="/user/user-detail/timeline">Timeline About</a></li>
+              <li><a routerLink="/user/user-detail/timeline-friends">Timeline Friends</a></li>
               <li><a href="edit-profile-settings.html">Account Settings</a></li>
               <li><a routerLink="/user/password">Change Password</a></li>
             </ul>
           </li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle pages" data-toggle="dropdown" role="button" aria-haspopup="true"
-               aria-expanded="false">All Pages <span><img src="assets/images/down-arrow.png" alt=""/></span></a>
+               aria-expanded="false">All Pages <span><img src="images/down-arrow.png" alt=""/></span></a>
             <ul class="dropdown-menu page-list">
               <li><a routerLink="/user/newsfeed/detail">Newsfeed</a></li>
               <!--              <li><a href="index-register.html">Landing Page 2</a></li>-->
@@ -60,15 +60,15 @@
               <li><a routerLink="/user/newsfeed/people-nearby">Friend Suggestions</a></li>
               <li><a href="newsfeed-messages.html">Chatroom</a></li>
               <li><a href="newsfeed-images.html">Images</a></li>
-              <li><a routerLink="/post/detail/list-post">Timeline</a></li>
+              <li><a href="timeline.html">Timeline</a></li>
               <li><a routerLink="/user/user-detail/timeline">Timeline About</a></li>
               <li><a routerLink="/user/user-detail/timeline-friends">Timeline Friends</a></li>
               <li><a routerLink="/user/edit">Edit Profile</a></li>
               <li><a routerLink="/user/password">Change Password</a></li>
             </ul>
           </li>
-          <li class="dropdown"><a>{{currentUser.username}}</a></li>
-          <li class="dropdown"><img style="width: 40px;height: 40px;border-radius: 50%;margin-top: 8px" src="{{avatar}}"
+          <li class="dropdown"><a>{{userDetail?.username}}</a></li>
+          <li class="dropdown"><img style="width: 40px;height: 40px;border-radius: 50%;margin-top: 8px" src="{{userDetail?.avatar}}"
                                     alt=""></li>
           <li class="dropdown"><a (click)="logout()">Logout</a></li>
         </ul>
@@ -83,22 +83,21 @@
   </nav>
 </header>
 <!--Header End-->
-
 <div class="container">
 
   <!-- Timeline
   ================================================= -->
   <div class="timeline">
-    <div [ngStyle]="{'background': 'url(' + cover + ')'}" class="timeline-cover">
+    <div [ngStyle]="{'background': 'url(' + userDetail?.cover + ')'}" class="timeline-cover">
 
       <!--Timeline Menu for Large Screens-->
       <div class="timeline-nav-bar hidden-sm hidden-xs">
         <div class="row">
           <div class="col-md-3">
             <div class="profile-info">
-              <img src="{{avatar}}" alt="" class="img-responsive profile-photo"/>
-              <h3>{{currentUser.username}}</h3>
-              <p class="text-muted">{{currentUser.address}}</p>
+              <img src="{{userDetail?.avatar}}" alt="" class="img-responsive profile-photo"/>
+              <h3>{{userDetail?.username}}</h3>
+              <p class="text-muted">{{userDetail?.address}}</p>
             </div>
           </div>
           <div class="col-md-9">
@@ -109,7 +108,6 @@
               <li><a routerLink="/user/user-detail/timeline-friends">Friends</a></li>
             </ul>
             <ul class="follow-me list-inline">
-
             </ul>
           </div>
         </div>
@@ -118,9 +116,9 @@
       <!--Timeline Menu for Small Screens-->
       <div class="navbar-mobile hidden-lg hidden-md">
         <div class="profile-info">
-          <img src="{{avatar}}" alt="" class="img-responsive profile-photo"/>
-          <h4>{{currentUser.username}}</h4>
-          <p class="text-muted">Creative Director</p>
+          <img src="{{userDetail?.avatar}}" alt="" class="img-responsive profile-photo"/>
+          <h4>{{userDetail?.username}}</h4>
+          <p class="text-muted">{{userDetail?.address}}</p>
         </div>
         <div class="mobile-menu">
           <ul class="list-inline">
@@ -133,26 +131,10 @@
       </div><!--Timeline Menu for Small Screens End-->
 
     </div>
-    <div id="page-contents">
-      <div class="row">
-        <div class="col-md-3">
+    <router-outlet></router-outlet>
 
-          <!--Edit Profile Menu-->
-          <ul class="edit-menu">
-            <li class="active"><i class="icon ion-ios-information-outline"></i><a routerLink="/user/user-detail">Basic
-              Information</a></li>
-            <!--            <li><i class="icon ion-ios-briefcase-outline"></i><a href="edit-profile-work-edu.html">Education and Work</a></li>-->
-            <!--            <li><i class="icon ion-ios-heart-outline"></i><a href="edit-profile-interests.html">My Interests</a></li>-->
-            <li><i class="icon ion-ios-settings"></i><a href="edit-profile-settings.html">Account Settings</a></li>
-            <li><i class="icon ion-ios-locked-outline"></i><a routerLink="/user/password">Change Password</a></li>
-          </ul>
-        </div>
-        <router-outlet></router-outlet>
-      </div>
-    </div>
   </div>
 </div>
-
 
 <!-- Footer
 ================================================= -->
@@ -161,7 +143,7 @@
     <div class="row">
       <div class="footer-wrapper">
         <div class="col-md-3 col-sm-3">
-          <a href=""><img src="assets/images/logo-black.png" alt="" class="footer-logo"/></a>
+          <a href=""><img src="images/logo-black.png" alt="" class="footer-logo"/></a>
           <ul class="list-inline social-icons">
             <li><a href="#"><i class="icon ion-social-facebook"></i></a></li>
             <li><a href="#"><i class="icon ion-social-twitter"></i></a></li>
