--- a/src/app/module/user/newsfeed/newsfeed.component.html
+++ b/src/app/module/user/newsfeed/newsfeed.component.html
@@ -43,7 +43,7 @@
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
                aria-expanded="false">Timeline <span><img src="images/down-arrow.png" alt=""/></span></a>
             <ul class="dropdown-menu login">
-              <li><a routerLink="/user/user-detail/timeline-post">Timeline</a></li>
+              <li><a routerLink="/post/detail/list-post">Timeline</a></li>
               <li><a routerLink="/user/user-detail/timeline">Timeline About</a></li>
               <li><a routerLink="/user/user-detail/timeline-friends">Timeline Friends</a></li>
               <li><a href="edit-profile-settings.html">Account Settings</a></li>
@@ -62,7 +62,7 @@
               <li><a routerLink="/user/newsfeed/people-nearby">Friend Suggestions</a></li>
               <li><a href="newsfeed-messages.html">Chatroom</a></li>
               <li><a href="newsfeed-images.html">Images</a></li>
-              <li><a href="timeline.html">Timeline</a></li>
+              <li><a routerLink="/post/detail/list-post">Timeline</a></li>
               <li><a routerLink="/user/user-detail/timeline">Timeline About</a></li>
               <li><a routerLink="/user/user-detail/timeline-friends">Timeline Friends</a></li>
               <li><a routerLink="/user/edit">Edit Profile</a></li>
